--- a/css/styles.css
+++ b/css/styles.css
@@ -62,9 +62,28 @@
     height: auto;
   }
   .image1:hover .overlay {
-    opacity:0.5;
+    opacity:0.8;
   }
 h2 {
     text-align: center;
 }
-
+body{
+    background-color: #500778;
+    color: white;
+}
+.text {
+    color: black;
+    font-size: 20px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    text-align: center;
+  }
+button {
+    display: flex;
+    padding-left: 2%;
+    margin-left: 40%;
+}
