--- a/css/books.css
+++ b/css/books.css
@@ -1,22 +1,17 @@
+*{
+    box-sizing: border-box;
+}
+
+html,body{
+  height: 100%;
+  background:lightblue;
+}
+
 .container{
     overflow: hidden;
     height: 100vh;
 }
 
-@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
-*{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
-}
-html,body{
-  /* display: grid; */
-  height: 100%;
-  /* place-items: center; */
-  /* text-align: center; */
-  background:lightblue;
-}
 .slider{
   max-width: 1100px;
   display: flex;
@@ -38,6 +33,15 @@ html,body{
 .slider .card .content{
   padding: 10px 20px;
 }
+
+.owl-stage {
+    display: flex;
+ }
+ .owl-item {
+    display: flex;
+    flex: 1 0 auto;
+ }
+
 .card .content .title{
   font-size: 25px;
   font-weight: 600;
@@ -70,4 +74,12 @@ html,body{
 }
 .card .content .btn button:hover{
   transform: scale(0.9);
+}
+
+div{
+    overflow: hidden;
+}
+
+.card-img-top{
+    height: 250px;
 }
