--- a/css/books.css
+++ b/css/books.css
@@ -6,7 +6,7 @@ body{
   min-height: 100vh;
   margin: 0px;
   display: block;
-  background:lightblue;
+  background:lightgray;
   overflow: auto;
 }
 
