--- a/css/books.css
+++ b/css/books.css
@@ -12,11 +12,15 @@ body{
 
 .container{
     overflow: hidden;
-    padding: 5px 10px;
+    padding: 0px;
     border-radius: 35px;
 }
 
-div{
+section{
+  padding: 5px 5px;
+}
+
+div,nav{
     overflow: hidden;
 }
 
