--- a/css/juliet.css
+++ b/css/juliet.css
@@ -18,7 +18,7 @@ body{
     font-size: 22px;
     padding-left: 5%;
     padding-right: 5%;
-    font-family: 'Tangerine', serif;
+    font-family: serif;
 }
 .carousel-inner > .item > img, .carousel-inner > .item > a > img {
     width: 100%;
