--- a/css/caisey.css
+++ b/css/caisey.css
@@ -31,7 +31,7 @@
   
   .row1 {
     display: flex;
-    padding-left: 1%;
+    /* padding-left: 1%; */
   }
   .gallery h2{
     text-align: center;
@@ -85,17 +85,18 @@ body{
     text-align: center;
   }
 button {
-    display: flex;
-    padding-left: 2%;
-    margin-left: 35%;
+    /* display: flex; */
+    /* padding-left: 2%;
+    margin-left: 35%; */
+    background-color: blanchedalmond;
 }
 
 #more {display: none;}
 .read{
-  background-color: white;
+  /* background-color: white; */
   color: black;
-  margin-left: 8%;
-  width: 80%;
+  /* margin-left: 8%; */
+  /* width: auto; */
 }
   
 .read p{
@@ -107,6 +108,6 @@ button {
   margin-left: 42%;
 }
 .gallery {
-  margin-left: 5%;
+  margin: auto;
 }
 
