--- a/css/mercy.css
+++ b/css/mercy.css
@@ -1,34 +1,65 @@
 body{
     background-color: #500778;
     background-size: cover;
-
 }
-
 .text{
-    color: darkgoldenrod;
+    color: black;
     font-size: 30px;
     font-family: 'Dancing Script', cursive;
-    text-align: center;  
+    text-align: center;
 }
 .card-title{
     font-size: 15px;
-    color: darkgoldenrod;   
+    color: black;
 }
-
 #myForm{
     padding-top: 20px;
     width: 50%;
-    /* display: none; */
-    
-    
 }
+
 button{
     border-radius: 50px;
     background-color: rgb(0, 140, 255);
     width: 100px;
     height: 50px;
 }
+
 input{
     color: white;
 }
+ #btn1,#btn2, #btn3, #btn4, #btn5, #btn6, #btn7, #btn8, #btn9, #btn10, #btn11, #btn12, form {
+    display: none;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
