--- a/css/caisey.css
+++ b/css/caisey.css
@@ -95,6 +95,8 @@ button {
 .read{
   /* background-color: white; */
   color: black;
+  margin:16px;
+  font-size: 22px;
   /* margin-left: 8%; */
   /* width: auto; */
 }
@@ -105,6 +107,7 @@ button {
 
 #myBtn{
   align-items: center;
+  color: black;
   /* margin-left: 42%; */
 }
 .gallery {
