--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,48 @@
+*{
+    font-family: 'PT Sans', sans-serif;
+}
+
+.container{
+    background-color: #17a2b8 !important ;
+    margin-top: 16px;
+    margin-bottom: 16px;
+}
+
 body{
     background-color: #9CACA5;
     color: white;
+}
+
+i{
+    margin: 0px 10px;
 }
 
 #nav-bar{
     background-color: black;
     font-size: 18px;
     padding: 18px;
-
+    text-align: right;
 }
+
+@media only screen and (max-width: 575px) {
+    #nav-bar{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+    }
+    #nav-bar a{
+        margin-top: 0px;
+        margin-bottom: 15px;
+    }
+}
+
+.links{
+    display: flex;
+    justify-content: center;
+    margin: 10px;
+}
+
 #nav-bar ul{
     padding: 0;
     list-style: none;
