--- a/css/styles.css
+++ b/css/styles.css
@@ -66,7 +66,15 @@ i{
     font-size: 18px;
     padding: 12px;
     text-align: center;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 }
+
+.flexy{
+    flex: 1;
+}
+
 h1 {
     text-align: center;
 }
@@ -75,4 +83,36 @@ h1 {
     overflow: hidden;
     padding: 0px;
     border-radius: 35px;
+}
+
+.enters{
+    margin: 5px;
+}
+
+textarea{
+    margin-bottom: 5px;
+}
+
+form .inputs{
+    width: 100%;
+}
+
+#MERGE0,#MERGE1,#MERGE2{
+    background-color: transparent;
+    color: rgba(255, 255, 255, 1);
+}
+
+#MERGE0::placeholder, #MERGE1::placeholder, #MERGE2::placeholder{
+    color: white;
+}
+
+@media only screen and (max-width: 750px) {
+    #footer{
+        display: flex;
+        flex-direction: column;
+        /* align-items: center; */
+    }
+    .flexy{
+        width: 100%;
+    }
 }
